<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_refresh"
        android:checkable="false"
        android:orderInCategory="1"
        android:title=""
        app:showAsAction="always"/>

    <item
        android:id="@+id/menu_scan"
        android:orderInCategory="100"
        android:title="@string/menu_scan"
        app:showAsAction="ifRoom|withText"/>
    <item
        android:id="@+id/menu_stop"
        android:orderInCategory="101"
        android:title="@string/menu_stop"
        app:showAsAction="ifRoom|withText"/>
    <item
        android:id="@+id/menu_filter"
        android:orderInCategory="102"
        android:title="@string/action_filter"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_disconnect"
        android:orderInCategory="103"
        android:title="@string/disconnected"
        app:showAsAction="ifRoom|withText"/>
    <item
        android:id="@+id/menu_connect"
        android:orderInCategory="103"
        android:title="@string/connected"
        app:showAsAction="ifRoom|withText"/>
</menu>
